# arbitrage-bot

./: .gitignore  Cargo.toml  Notes.md  README.md
.github/workflows/: main.yaml  pr.yaml
analyse/: Cargo.toml  README.md
analyse/src/: main.rs
arb/: Cargo.toml
arb/src/: erc20_commands.rs  main.rs
check/: Cargo.toml  README.md
check/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/tokens/: Cargo.toml
crates/tokens/src/: erc20.rs  erc20_constants.rs  lib.rs
crates/uniswapv3pool/: Cargo.toml
crates/uniswapv3pool/src/: lib.rs  pool_calcs.rs  pool_constants.rs  univ3contract.rs  univ3sdk.rs
pools/: Cargo.toml
pools/src/: main.rs  pool.rs
rb/: Cargo.toml
rb/src/: erc20_commands.rs  main.rs  pool_commands.rs
src/: main.rs
tests/: Cargo.toml
tests/src/: e2e.rs
tests/tests/: anvil.rs
tests/tests/common/: mod.rs
