[workspace]

resolver = "2"
members = [
    "analyse",
    "pools",
    "check",
    "bin/rb",
    "crates/tokens",
    "crates/uniswapv3pool",
]

[workspace.dependencies]
uniswap-v3-sdk = { version = "2.2.0", features = ["extensions", "std"] }
uniswap-sdk-core = "3.0.0"
eyre = "0.6.12"
alloy = { version = "0.5", features = ["contract"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
tokio = { version = "1.40", features = ["full"] }

tokens = { path = "./crates/tokens" }
uniswapv3pool = { path = "./crates/uniswapv3pool" }
