[package]
name = "analyse"
version = "0.1.0"
edition = "2021"

[dependencies]
uniswap-v3-sdk = { workspace = true }
uniswap-sdk-core = { workspace = true }
eyre = { workspace = true }

alloy = { version = "0.5", optional = true, features = ["contract"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"