[package]
name = "pools"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
uniswap-v3-sdk = { workspace = true }
uniswap-sdk-core = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tokio-scoped = "0.2.0"
