[package]
name = "rb"
version = "0.1.0"
edition = "2021"

[dependencies]
uniswap-v3-sdk = { workspace = true }
uniswap-sdk-core = { workspace = true }
eyre = { workspace = true }

alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
tokio = { workspace = true }

tokens.workspace = true
clap = { version = "4.5.20", features = ["derive"] }
